Finish the updates
